--- a/blog.html
+++ b/blog.html
@@ -53,57 +53,57 @@
       <!-- ここからブログ内容 -->
       <div class="blog wrap">
         <article class="blog__item">
-          <a href="#" class="blog__item__link">
+          <a href="#" >
             <img src="img/blog.png" alt="会社を創業した理由" />
           </a>
           <p class="blog__item-date">2019/07/17</p>
           <h3 class="blog__item-ttl">
-            <a href="#">会社を創業した理由</a>
+            <a href="#" class="blog__item__link">会社を創業した理由</a>
           </h3>
         </article>
         <article class="blog__item">
-          <a href="#" class="blog__item__link">
+          <a href="#" >
             <img src="img/blog.png" alt="ITエンジニアを育成する最強メソッド" />
           </a>
           <p class="blog__item-date">2019/11/11</p>
           <h3 class="blog__item-ttl">
-            <a href="#">ITエンジニアを育成する最強メソッド</a>
+            <a href="#" class="blog__item__link">ITエンジニアを育成する最強メソッド</a>
           </h3>
         </article>
         <article class="blog__item">
-          <a href="#" class="blog__item__link">
+          <a href="#" >
             <img src="img/blog.png" alt="コーチングによるモチベーション向上理論" />
           </a>
           <p class="blog__item-date">2020/08/01</p>
           <h3 class="blog__item-ttl">
-            <a href="#">コーチングによるモチベーション向上理論</a>
+            <a href="#" class="blog__item__link">コーチングによるモチベーション向上理論</a>
           </h3>
         </article>
         <article class="blog__item">
-          <a href="#" class="blog__item__link">
+          <a href="#" >
             <img src="img/blog.png" alt="会社を創業した理由" />
           </a>
           <p class="blog__item-date">2019/07/17</p>
           <h3 class="blog__item-ttl">
-            <a href="#">会社を創業した理由</a>
+            <a href="#" class="blog__item__link">会社を創業した理由</a>
           </h3>
         </article>
         <article class="blog__item">
-          <a href="#" class="blog__item__link">
+          <a href="#">
             <img src="img/blog.png" alt="会社を創業した理由" />
           </a>
           <p class="blog__item-date">2019/07/17</p>
           <h3 class="blog__item-ttl">
-            <a href="#">会社を創業した理由</a>
+            <a href="#" class="blog__item__link">会社を創業した理由</a>
           </h3>
         </article>
         <article class="blog__item">
-          <a href="#" class="blog__item__link">
+          <a href="#">
             <img src="img/blog.png" alt="会社を創業した理由" />
           </a>
           <p class="blog__item-date">2019/07/17</p>
           <h3 class="blog__item-ttl">
-            <a href="#">会社を創業した理由</a>
+            <a href="#" class="blog__item__link">会社を創業した理由</a>
           </h3>
         </article>
       </div>
